...
                            android:alpha="0.7"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnViewEvents"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Manage Events"
                    android:backgroundTint="@color/white"
...
                            android:alpha="0.7"
                            android:textSize="13sp" />
                    </LinearLayout>
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnViewProfiles"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="Manage Profiles"
                    android:backgroundTint="@color/white"
...
