...
            android:id="@+id/texts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="12dp"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintEnd_toStartOf="@+id/btnDeleteUser"
            app:layout_constraintTop_toTopOf="@id/avatar"
            app:layout_constraintBottom_toBottomOf="@id/avatar">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
...
            android:id="@+id/btnDeleteUser"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:textAllCaps="true"
            android:text="Remove"
            android:backgroundTint="@color/danger_red"
            android:textColor="@color/danger_red_on"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/texts"
            app:layout_constraintBottom_toBottomOf="@id/texts" />
...
